# smart-cart-backend

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0bfd215bfdc4_init.py  3d2c4e15cbbc_add_barcode_to_product.py  41a5ac32dfb4_add_banner_table.py  6f4530f31d8a_add_ordercodelookup_table.py  8a2017c378d5_add_model_type_to_aimodel.py  95368d46bc8d_remove_unique_on_product_vector.py  abb41021d4e4_implement_checkout_flow_and_remove_.py  afdcd696b6c4_add_create_time_for_product_vector.py  c02c21bc7c99_add_product_vector_table.py  f5abacd1a158_add_ai_model.py  fd504dbc1c8a_change_timezone_of_qrauthtoken.py  ff349cfc1bef_link_qr_token_to_shopping_session.py
app/: crud.py  deps.py  initial_data.py  main.py  models.py  schemas.py
app/api/: auth.py  banners.py  categories.py  checkout.py  debug.py  favorites.py  models.py  notifications.py  orders.py  products.py  promotions.py  reviews.py  sessions.py  vectors.py
app/core/: config.py  database.py  security.py
app/services/: ai_service.py  payment_service.py  r2_service.py
docs/: ai-pipeline-workflow.md  overview.md  system-architecture.md  technology-stack.md
docs/Technical Specification/: api-spec.md  data-schema.md
